--- a/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/28-3-2025.md
+++ b/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/28-3-2025.md
@@ -48,3 +48,11 @@ Dentro del Test Plan podemos definir variables como HOST donde podemos poner una
 Para ejecutar la prueba no deberemos hacerlo desde la GUI. Podremos ejecutar el test como `jmeter -n -t PracticasISE.jmx -l resultados.jtl`.
 
 El principal inconveniente de jmeter es usar un gestor de versiones ya que utiliza una tecnología muy desfasada.
+
+Podemos ver los resultados de nuevo desde la interfaz gráfica.
+
+En la vida real se podría colocar un proxy entre el host y el servidor para ver de forma realista todas las peticiones que se hacen al servidor. Otra opción es coger todos los logs que genera el servidor al que nos conectamos.
+
+Podemos añadir un Access Log Sampler al que le podemos pasar un archivo de logs del servidor y hará un test basándose en esa información.
+
+Si `./pruebaEntorno.sh` funciona correctamente ya podremos empezar a trabajar
