--- a/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/4-3-2025.md
+++ b/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/4-3-2025.md
@@ -41,3 +41,7 @@ Cuando pone build lo que va a hacer docker-compose es construir el contenedor co
 
 ---
 
+Es muy popular para monitorizar un equipo linux usar `top`. Esto nos muestra muchas métricas que se pueden ejecutar con distintas instrucciones. Esto significa que `top` es solo un entorno de usuario. Por ejemplo el uptime se puede obtener con `uptime`. Con `loadavg` podemos ver la carga media. Los procesos se pueden consultar listando el directorio `/proc`. Con `watch -n 1` podemos pedirle q ejecute un comando cada segundo (en este caso).
+
+Con load avg nos salen 2 parámetros, uno de 1 min, 5 min y 15 min. Para entender estos parámetros tenemos que saber cuántos cores tiene nuestro equipo. Si pone un 1 significa que la cpu se ha usado al 100%. Si pone un 2 significa que siempre se ha estado ejecutando un proceso y siempre ha habido uno en cola de ejecución. Sin embargo, si tenemos más de un core tendremos que saber que esta es la media por cada uno de los núcleos.
+
