--- a/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/4-3-2025.md
+++ b/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/4-3-2025.md
@@ -45,3 +45,23 @@ Es muy popular para monitorizar un equipo linux usar `top`. Esto nos muestra muc
 
 Con load avg nos salen 2 parámetros, uno de 1 min, 5 min y 15 min. Para entender estos parámetros tenemos que saber cuántos cores tiene nuestro equipo. Si pone un 1 significa que la cpu se ha usado al 100%. Si pone un 2 significa que siempre se ha estado ejecutando un proceso y siempre ha habido uno en cola de ejecución. Sin embargo, si tenemos más de un core tendremos que saber que esta es la media por cada uno de los núcleos.
 
+todos los logs del sistema se gestionan con `systemctl list-unit-files | grep systemd` y se pueden consultar en `/var/log`.
+
+Podemos probar a hacer `tail -f messages` en un equipo y desde el mismo equipo podemos hacer `logger -t ISE "Hola mundo"`
+
+---
+
+# Cron
+
+Cron es un demonio que está corriendo en el sistema (lo podemos consultar con  `ps ax | grep -i crond`). Se ejecuta con el arranque del sistema y se ejecuta en background. El fichero de configuración se encuentra en `/etc/crontab`. Este fichero no se suele modificar. Es más común que creemos nuestros propios archivos de cron y los metamos en cualquier directorio `etc/cron.*` según la periodicidad que queramos establecer. 
+
+Podemos ejecutar `crontab -e` para crear un nuevo cron. Por ejemplo podemos añadir la entrada 
+```
+* * * * * * echo "Hola ISE" | logger -t ise
+```
+para que cada minuto se mande al log un mensaje "Hola ISE".
+
+
+Para que los logs no se expandan hasta el infinito (ya que en servidores con gran carga de accesos y trabajos) existen funcionalidades como `logrotate` que no es un servicio, que se lanza por cron y lo único que hace es leer su configuración y ejecutarla. De esta forma se pueden configurar parámetros como el número máximo de archivos de logs (cuando se supere ese número se borrará el más antiguo). Estos scripts se encuentran en logrotate.d, dependiendo del servicio que ejecuta logs. El principal problema de logrotate es que necesita matar los procesos para rotar los logs. Para ello existe `rotatelogs` que no necesita matar los procesos.
+
+journalctl nos permite ver los mensajes del sistema.
