--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Primer día.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Primer día.ipynb
@@ -1,12 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a0509245",
+   "metadata": {},
+   "source": [
+    "# Primer Día"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "26640aee",
+   "execution_count": 1,
+   "id": "615836cf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   }
  ],
  "metadata": {
