--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Prado/P1_Resol_ecuaciones_no_lineales.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Prado/P1_Resol_ecuaciones_no_lineales.ipynb
@@ -2426,6 +2426,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[30m\u001b[47mCálculo de raíces con funciones de python:\u001b[0m\n",
+      "\tRaíz 1: -1.00000000000000\n",
+      "\tRaíz 2: -0.713102145851293 - 0.98823188827156*I\n",
+      "\tRaíz 3: -0.713102145851293 + 0.98823188827156*I\n",
+      "\tRaíz 4: 1.06110281046036 - 0.376384046559108*I\n",
+      "\tRaíz 5: 1.06110281046036 + 0.376384046559108*I\n",
+      "\tRaíz 6: 0.151999335390936 - 1.01945594669063*I\n",
+      "\tRaíz 7: 0.151999335390936 + 1.01945594669063*I\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = sp.solve(f(x),x)\n",
+    "\n",
+    "print(Title(\"Cálculo de raíces con funciones de python:\"))\n",
+    "\n",
+    "n=0\n",
+    "\n",
+    "for r in resultado :\n",
+    "    n+=1\n",
+    "    print(f\"\\tRaíz {n}: {r.evalf()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[30m\u001b[47mCálculo de raíces con funciones de python:\u001b[0m\n",
+      "\tRaíz 1: -1.00000000000000\n",
+      "\tRaíz 2: -0.713102145851293 - 0.98823188827156*I\n",
+      "\tRaíz 3: -0.713102145851293 + 0.98823188827156*I\n",
+      "\tRaíz 4: 1.06110281046036 - 0.376384046559108*I\n",
+      "\tRaíz 5: 1.06110281046036 + 0.376384046559108*I\n",
+      "\tRaíz 6: 0.151999335390936 - 1.01945594669063*I\n",
+      "\tRaíz 7: 0.151999335390936 + 1.01945594669063*I\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = sp.solve(f(x),x)\n",
+    "\n",
+    "print(Title(\"Cálculo de raíces con funciones de python:\"))\n",
+    "\n",
+    "n=0\n",
+    "\n",
+    "for r in resultado :\n",
+    "    n+=1\n",
+    "    print(f\"\\tRaíz {n}: {r.evalf()}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
