--- a/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_1/P1.ipynb
+++ b/documents/Tercero/Segundo Cuatrimestre/Métodos_Numéricos_II/Prácticas/Practica_1/P1.ipynb
@@ -185,7 +185,7 @@
     "\n",
     "print('\\n')\n",
     "\n",
-    "# Ajustamos la precisión y la tolerancia\n",
+    "# Ajustamos la tolerancia\n",
     "cifras = 28\n",
     "tol = 10**(-cifras)                     # 28 cifras significativas\n",
     "getcontext().prec = cifras\n",
