--- a/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/memoria/Monitorización_de_Servidor_Linux.tex
+++ b/documents/Tercero/Segundo Cuatrimestre/ISE/Prácticas/memoria/Monitorización_de_Servidor_Linux.tex
@@ -18,7 +18,9 @@
   numbers=none,               
   frame=none,                 
   breaklines=true,            
-  showstringspaces=false      
+  showstringspaces=false,
+  aboveskip=1em,   % espacio antes del bloque
+  belowskip=1em    % espacio después del bloque
 }
 
 \lstnewenvironment{icodeblock}[1][]
@@ -29,6 +31,13 @@
 
 \usepackage{sectsty} % paquete para modificar estilos de secciones
 \allsectionsfont{\sffamily}
+
+\newcommand{\img}[1] {
+    \begin{center}
+        \includegraphics[width=15cm]{./images/img#1.png}
+    \end{center}
+}
+
 
 \begin{document}
 
@@ -227,8 +236,8 @@ Comenzamos instalando \icode{httpd} en el servidor (img25):
 \begin{icodeblock}[bash]
 sudo dnf install httpd
 \end{icodeblock}
-Podemos ver que inicialmente el panel \icode{Httpd Service [JMV]} se encuentra en estado \icode{Off} (img26) :
-![](./images/img26.png)
+Podemos ver que inicialmente el panel \icode{Httpd Service [JMV]} se encuentra en estado \icode{Off} (img26):
+\img{26}
 
 Si ahora probamos a iniciar el servicio \icode{httpd} obtenemos (img27): 
 \begin{icodeblock}[bash]
@@ -250,15 +259,13 @@ Probamos nuevamente a desactivar también \icode{httpd}
 \begin{icodeblock}[bash]
 systemctl stop httpd
 \end{icodeblock}
-![](./images/img29.png)
-
+\img{29}
 Finalmente podemos activar los dos a la vez y tenemos el siguiente resultado (img30):
 \begin{icodeblock}[bash]
 systemctl start httpd
 systemctl start sshd
 \end{icodeblock}
-![](./images/img30.png)
-
+\img{30}
 Vamos ahora con el panel para medir el uso de la CPU. Creamos un nuevo panel y añadimos el siguiente Query (img31):
 \begin{icodeblock}
 100 - (avg by (instance) (rate(node_cpu_seconds_total{mode="idle"}[1m])) * 100)
@@ -267,22 +274,18 @@ Vamos ahora con el panel para medir el uso de la CPU. Creamos un nuevo panel y a
 Podemos tocar los tresholds de nuevo para darle un aspecto más atractivo. Finalizada la creación de este panel es hora de crear una alerta. Le damos a alerts y añadimos una nueva alerta (img32). 
 
 Le indicamos la misma métrica que antes y en la expresión B añadimos
-\icode{WHEN last OF A IS ABOVE 75}. Una vez hecho esto terminamos de configurar la alerta poniéndole \icode{Evaluate 1m for 5m} para que salte a los 5 min comprobándolo cada minuto. Podemos pasar ya a probar el panel y la alerta (img33). Ejecutamos en la máquina virtual:
+\icode{WHEN last OF A} \icode{IS ABOVE 75}. Una vez hecho esto terminamos de configurar la alerta poniéndole \icode{Evaluate 1m for 5m} para que salte a los 5 min comprobándolo cada minuto. Podemos pasar ya a probar el panel y la alerta (img33). Ejecutamos en la máquina virtual:
 \begin{icodeblock}[bash]
 stress --cpu 4 --timeout 360
 \end{icodeblock}
-![](./images/img33.png)
-
+\img{33}
 Y vemos cómo empieza a subir el uso de la CPU en el panel recién creado. Si vemos un poco más observamos que cuando supera el 75% (línea roja) se dispara la alarma pero en estado \icode{pending} (img34):
 
-![](./images/img34.png)
-
+\img{34}
 Ahora empezará a contar 5 minutos hasta que se cumpla la condición para que salte la alarma (img35):
 
-![](./images/img35.png)
-
+\img{35}
 Si lo dejamos un poco más vemos cómo de desactiva la alerta al volver a un uso bajo de la CPU (img36):
 
-![](./images/img36.png)
-
+\img{36}
 \end{document}
